Fixed bug #31079 - NFE at .dlg.ColumnItem.setProperty(ColumnItem.java:128)